assets/styles/components/_wp-classes.scss
// WordPress Generated Classes
// http://codex.wordpress.org/CSS#WordPress_Generated_Classes

// Media alignment
.alignnone {
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  height: auto;
}
.aligncenter {
  display: block;
  margin: ($line-height-computed / 2) auto;
  height: auto;
}
.alignleft,
.alignright {
  margin-bottom: ($line-height-computed / 2);
  height: auto;
}

// Gallery
.gallery {

  &::before,
  &::after {
    content: " ";
    clear: both;
    display: table;
  }

  .gallery-item {
    float: left;

    img { width: 100%; }
  }

  &.gallery-columns-1 .gallery-item { width: 100%; }
  &.gallery-columns-2 .gallery-item { width: 50%; }
  &.gallery-columns-3 .gallery-item { width: calc(100% / 3); }
  &.gallery-columns-4 .gallery-item { width: calc(100% / 4); }
  &.gallery-columns-5 .gallery-item { width: calc(100% / 5); }
  &.gallery-columns-6 .gallery-item { width: calc(100% / 6); }
  &.gallery-columns-7 .gallery-item { width: calc(100% / 7); }
  &.gallery-columns-8 .gallery-item { width: calc(100% / 8); }
  &.gallery-columns-9 .gallery-item { width: calc(100% / 9); }
}

// Captions
.wp-caption {
  @extend .thumbnail;
}
.wp-caption-text {
  padding: $thumbnail-caption-padding;
}

// Text meant only for screen readers
.screen-reader-text {
  @extend .sr-only;
  @extend .sr-only-focusable;
}

/* Small devices (tablets, 768px and up) */
@media (min-width: $screen-sm-min) {
  // Only float if not on an extra small device
  .alignleft {
    float: left;
    margin-right: ($line-height-computed / 2);
  }
  .alignright {
    float: right;
    margin-left: ($line-height-computed / 2);
  }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: $screen-md-min) { }

/* Large devices (large desktops, 1200px and up) */
@media (min-width: $screen-lg-min) { }

